IN DEVELOPMENT

bzr 0.15 (not finalised)

  INTERNALS:

    * Added ``ReadLock.temporary_write_lock()`` to allow upgrading an OS read
      lock to an OS write lock. Linux can do this without unlocking, Win32
      needs to unlock in between. (John Arbash Meinel)

  BUGFIXES:

    * Take smtp_server from user config into account.
      (vila, #92195)

    * Restore Unicode filename handling for versioned and unversioned files.
      (John Arbash Meinel, #92608)

    * Don't fail during ``bzr commit`` if a file is marked removed, and
      the containing directory is auto-removed.  (John Arbash Meinel, #93681)

    * ``bzr status FILENAME`` failed on Windows because of an uncommon
      errno. (``ERROR_DIRECTORY == 267 != ENOTDIR``).
      (Wouter van Heyst, John Arbash Meinel, #90819)
 

bzr 0.15rc2  2007-03-14

  NOTES WHEN UPGRADING:
        
    * Release 0.15rc2 of bzr changes the ``bzr init-repo`` command to
      default to ``--trees`` instead of ``--no-trees``.
      Existing shared repositories are not affected.

  IMPROVEMENTS:

    * New ``merge-directive`` command to generate machine- and human-readable
      merge requests.  (Aaron Bentley)

    * New ``submit:`` revision specifier makes it easy to diff against the
      common ancestor with the submit location (Aaron Bentley)

    * Added support for Putty's SSH implementation. (Dmitry Vasiliev)

    * Added ``bzr status --versioned`` to report only versioned files, 
      not unknowns. (Kent Gibson)

    * Merge now autodetects the correct line-ending style for its conflict
      markers.  (Aaron Bentley)

  INTERNALS:

    * Refactored SSH vendor registration into SSHVendorManager class.
      (Dmitry Vasiliev)

  BUGFIXES:

    * New ``--numbered-dirs`` option to ``bzr selftest`` to use
      numbered dirs for TestCaseInTempDir. This is default behavior
      on Windows. Anyone can force named dirs on Windows
      with ``--no-numbered-dirs``. (Alexander Belchenko)
